<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlogFragment">

    <ImageView
        android:id="@+id/blogImageView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/blogTitle"
        style="@style/bg_border_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/itim_regular"
        android:hint="@string/blogTitle"
        android:textColorHint="#808080"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@id/blogImageView"
        app:layout_constraintStart_toStartOf="@+id/blogImageView"
        app:layout_constraintTop_toBottomOf="@id/blogImageView" />

    <EditText
        android:id="@+id/blogContent"
        style="@style/bg_border_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/itim_regular"
        android:hint="@string/blogContent"
        android:textColorHint="#808080"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@id/blogTitle"
        app:layout_constraintStart_toStartOf="@+id/blogTitle"
        app:layout_constraintTop_toBottomOf="@id/blogTitle" />

    <Button
        android:id="@+id/addData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/addData"
        app:layout_constraintEnd_toEndOf="@+id/blogContent"
        app:layout_constraintStart_toStartOf="@+id/blogContent"
        app:layout_constraintTop_toBottomOf="@id/blogContent" />


</androidx.constraintlayout.widget.ConstraintLayout>