<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    tools:ignore="TextFields">

    <androidx.cardview.widget.CardView
        android:id="@+id/profCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_105sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profImageView"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/profName"
        style="@style/bg_border_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/itim_regular"
        android:hint="@string/profName"
        android:textColorHint="#808080"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@id/profCardView"
        app:layout_constraintStart_toStartOf="@+id/profCardView"
        app:layout_constraintTop_toBottomOf="@id/profCardView" />

    <EditText
        android:id="@+id/profEmail"
        style="@style/bg_border_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/itim_regular"
        android:hint="@string/profEmail"
        android:textColorHint="#808080"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@id/profName"
        app:layout_constraintStart_toStartOf="@+id/profName"
        app:layout_constraintTop_toBottomOf="@id/profName" />
    <EditText
        android:id="@+id/profPassword"
        style="@style/bg_border_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/itim_regular"
        android:hint="@string/profPassword"
        android:textColorHint="#808080"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@id/profEmail"
        app:layout_constraintStart_toStartOf="@+id/profEmail"
        app:layout_constraintTop_toBottomOf="@id/profEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>