<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoardActivity"
    tools:openDrawer="start">

    <include layout="@layout/app_bar_main" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/includeHeaderLayout"
                layout="@layout/header_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/navTxtHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/itim_regular"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="@id/includeHeaderLayout"
                app:layout_constraintStart_toStartOf="@id/includeHeaderLayout"
                app:layout_constraintTop_toBottomOf="@id/includeHeaderLayout" />

            <TextView
                android:id="@+id/navTxtPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/itim_regular"
                android:text="@string/navTxtPrivacyPolicy"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="@id/navTxtHome"
                app:layout_constraintStart_toStartOf="@id/navTxtHome"
                app:layout_constraintTop_toBottomOf="@id/navTxtHome" />

            <TextView
                android:id="@+id/navTxtLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/itim_regular"
                android:padding="@dimen/_15sdp"
                android:text="@string/navTxtLogOut"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>